<resources>
    <string name="app_name">MYCOFFEESHOP</string>
    <string name="choice_your_favourite_coffee">CHOICE YOUR FAVOURITE COFFEE</string>
    <string name="get_started">GET_STARTED</string>
    <string name="choose_your_favourite_coffee">CHOOSE YOUR FAVOURITE COFFEE</string>
    <string name="coffee_image">Coffee image</string>
    <string name="espresso">Espresso</string>
    <string name="strong_and_bold_shot_of_coffee">Strong and bold shot of coffee</string>
    <string name="_120">₹120</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="total_120">Total: ₹120</string>
    <string name="full_name">Full Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="place_order">Place Order</string>
    <string name="cappuccino_">Cappuccino</string>
    <string name="Total_120">Total: ₹120</string>
    <string name="Full_name">Full Name</string>
    <string name="Delivery_address">Delivery Address</string>
    <string name="Phone_number">Phone Number</string>
    <string name="Confirm_order">Confirm Order</string>
    <string name="Coffee_image">Coffee Image</string>
    <string name="proceed_to_delivery">Proceed to Delivery</string>
    <string name="coffee_order_app">Coffee Order App</string>
    <string name="you_example_com">you@example.com</string>
</resources>
